--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,21 +1,35 @@
 [buildout]
-extends = http://dist.plone.org/release/5.0-latest/versions.cfg
-parts = test omelette interpreter
+parts =
+    code-analysis
+    isort
+    test
+
 develop = .
 
-[versions]
-plone.namedfile = 
+extensions = mr.developer
+sources-dir = extras
+sources = sources
+auto-checkout =
+    plone.rfc822
+    plone.scale
+    plone.supermodel
+    plone.testing
+
+[sources]
+plone.rfc822 = git https://github.com/pyrenees/plone.rfc822 pushurl=git@github.com:pyrenees/plone.rfc822
+plone.scale = git https://github.com/pyrenees/plone.scale pushurl=git@github.com:pyrenees/plone.scale
+plone.supermodel = git https://github.com/pyrenees/plone.supermodel pushurl=git@github.com:pyrenees/plone.supermodel
+plone.testing = git https://github.com/pyrenees/plone.testing pushurl=git@github.com:pyrenees/plone.testing
+
+[code-analysis]
+recipe = plone.recipe.codeanalysis [recommended]
+directory = ${buildout:directory}/plone
+pre-commit-hook = True
+
+[isort]
+recipe = zc.recipe.egg
+eggs = isort
 
 [test]
 recipe = zc.recipe.testrunner
-defaults = ['-v', '-s', 'plone.namedfile']
 eggs = plone.namedfile [test]
-
-[omelette]
-recipe = collective.recipe.omelette
-eggs = ${test:eggs}
-
-[interpreter]
-recipe = zc.recipe.egg
-eggs = ${test:eggs}
-interpreter = interpreter
